# Skyscraper

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
benches/: benchmarks.rs  html_benchmark.rs  xpath_benchmark.rs
crates/racoon-core/: Cargo.toml
crates/racoon-core/src/: lib.rs  textpointer.rs  vecpointer.rs
crates/racoon-html/: Cargo.toml
crates/racoon-html/src/: lib.rs  tokenizer.rs
crates/racoon-xpath/: Cargo.toml
crates/racoon-xpath/src/: lib.rs  parse.rs  tokenizer.rs  xpath.rs
crates/racoon-xpath/tests/: integration_test.rs
crates/racoon-xpath/tests/samples/: James-LG_Racoon.html
crates/skyscraper/: Cargo.toml
crates/skyscraper-html/: Cargo.toml
crates/skyscraper-html/src/: lib.rs  tokenizer.rs
crates/skyscraper-xpath/: Cargo.toml
crates/skyscraper-xpath/src/: lib.rs  parse.rs  tokenizer.rs
crates/skyscraper-xpath/tests/: integration_test.rs
crates/skyscraper-xpath/tests/samples/: James-LG_Skyscraper.html
crates/skyscraper/src/: lib.rs
named_character_ref_generator/: run.py
proptest-regressions/xpath/grammar/: terminal_symbols.txt  xml_names.txt
racoon/: Cargo.toml
racoon-common/: Cargo.toml
racoon-common/src/: lib.rs
racoon-html/: Cargo.toml
racoon-html/src/: lib.rs  tokenizer.rs
racoon/src/: lib.rs
rxpath/: Cargo.toml
rxpath-html/: Cargo.toml
rxpath-html/src/: lib.rs  tokenizer.rs
rxpath/src/: lib.rs
rxpath_lexer/: Cargo.toml
rxpath_lexer/src/: lib.rs
rxpath_lexer/tests/: integration_tests.rs
rxpath_parser/: Cargo.toml
rxpath_parser/src/: lib.rs
src/: lib.rs  vecpointer.rs
src/html/: mod.rs  parse.rs  tokenizer.rs
src/html/grammar/: chars.rs  document_builder.rs  insertion_mode_impls.rs  mod.rs  test_framework.rs
src/html/grammar/tokenizer/: mod.rs  named_character_references.rs  state_impls.rs
src/html/parse/: malformed_html_handlers.rs  mod.rs  parse_options.rs
src/html/tokenizer/: helpers.rs  mod.rs  symbols.rs  tokens.rs
src/xpath/: mod.rs  parse.rs  query.rs  search.rs  tokenizer.rs  xpath_item_set.rs
src/xpath/grammar/: mod.rs  recipes.rs  terminal_symbols.rs  whitespace_recipes.rs  xml_names.rs  xpath_diagram.md
src/xpath/grammar/data_model/: mod.rs
src/xpath/grammar/expressions/: arithmetic_expressions.rs  arrow_operator.rs  common.rs  comparison_expressions.rs  conditional_expressions.rs  for_expressions.rs  let_expressions.rs  logical_expressions.rs  mod.rs  postfix_expressions.rs  quantified_expressions.rs  simple_map_operator.rs  string_concat_expressions.rs
src/xpath/grammar/expressions/expressions_on_sequence_types/: cast.rs  castable.rs  instance_of.rs  mod.rs  treat.rs
src/xpath/grammar/expressions/maps_and_arrays/: arrays.rs  maps.rs  mod.rs
src/xpath/grammar/expressions/maps_and_arrays/lookup_operator/: mod.rs  postfix_lookup.rs  unary_lookup.rs
src/xpath/grammar/expressions/path_expressions/: abbreviated_syntax.rs  mod.rs
src/xpath/grammar/expressions/path_expressions/steps/: axes.rs  axis_step.rs  forward_step.rs  mod.rs  node_tests.rs  reverse_step.rs  step_expr.rs
src/xpath/grammar/expressions/path_expressions/steps/axes/: forward_axis.rs  mod.rs  reverse_axis.rs
src/xpath/grammar/expressions/primary_expressions/: enclosed_expressions.rs  inline_function_expressions.rs  literals.rs  mod.rs  named_function_references.rs  parenthesized_expressions.rs  static_function_calls.rs  variable_references.rs
src/xpath/grammar/expressions/sequence_expressions/: combining_node_sequences.rs  constructing_sequences.rs  mod.rs
src/xpath/grammar/types/: array_test.rs  attribute_test.rs  common.rs  element_test.rs  function_test.rs  map_test.rs  mod.rs  schema_element_test.rs  sequence_type.rs
src/xpath/tokenizer/: helpers.rs  mod.rs  symbols.rs  tokens.rs
tests/: apply_to_item_tests.rs  contains_tests.rs  forward_step_tests.rs  github_sample_tests.rs  html_basic_tests.rs  html_github_tests.rs  html_tests.rs  integration_test.rs  lxml_tests.rs  path_tests.rs  predicate_tests.rs  reverse_step_tests.rs  run_stack_overflow_tests.rs  static_function_tests.rs  treat_tests.rs  type_matching_tests.rs  xpath_tests.rs
tests/html_tests/: html_basic_tests.rs  html_github_tests.rs  html_tests.rs
tests/lxml_tests/: README.md  requirements.txt  xpath.py
tests/samples/: James-LG_Skyscraper.html
tests/stack_overflow_tests/: Cargo.toml  README.md
tests/stack_overflow_tests/src/: main.rs
tests/test_framework/: mod.rs
tests/xpath_tests/: apply_to_item_tests.rs  contains_tests.rs  forward_step_tests.rs  github_sample_tests.rs  lxml_tests.rs  path_tests.rs  predicate_tests.rs  reverse_step_tests.rs  static_function_tests.rs  treat_tests.rs  type_matching_tests.rs
