[package]
name = "skyscraper"
version = "0.4.0"
authors = ["James La Novara-Gsell <james.lanovara.gsell@gmail.com>"]
edition = "2018"
description = "XPath for HTML web scraping"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/James-LG/Skyscraper"
repository = "https://github.com/James-LG/Skyscraper"
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "4.3.1"
lazy_static = "1.4.0"
thiserror = "1.0.30"
indexmap = "1.8.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false