[package]
name = "skyscraper"
version = "0.5.1"
authors = ["James La Novara-Gsell <james.lanovara.gsell@gmail.com>"]
edition = "2021"
description = "XPath for HTML web scraping"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/James-LG/Skyscraper"
repository = "https://github.com/James-LG/Skyscraper"
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "4.3.1"
thiserror = "1.0.52"
indexmap = "2.0.0"
log = "0.4.19"
nom = "7.1.3"
ordered-float = "4.2.0"
once_cell = "1.19.0"
enum-extract-macro = "0.1.0"
enum-extract-error = "0.1.0"

[dev-dependencies]
criterion = "0.5.1"
mockall = "0.12.0"
indoc = "2"
proptest = "1.3.1"

[[bench]]
name = "benchmarks"
harness = false
