[package]
name = "racoon-html"
version = "0.1.0"
authors = ["James La Novara-Gsell <james.lanovara.gsell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
racoon-core = { path = "../racoon-core" }
racoon-xpath = { path = '../racoon-xpath' }
indextree = "4.3.1"
lazy_static = "1.4.0"