[package]
name = "skyscraper"
version = "0.1.0"
authors = ["James La Novara-Gsell <james.lanovara.gsell@gmail.com>"]
edition = "2018"
description = "XPath for HTML web scraping"
license-file = "../../LICENSE"
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "4.3.1"
